# pyia

./: .pre-commit-config.yaml  .rtd-environment.yml  .travis.yml  CHANGES.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  packaging.yml  tests.yml  wheels.yml
docs/: conf.py  index.md  index.rst  install.rst
docs/_static/: custom.css  gdr2_rv_sm.fits  gdr2_sm.fits  gdr2mock.fits  pyia.css
docs/css/: custom.css
gaia/: __init__.py  data.py
gaia/dr1/: __init__.py  core.py  setup_package.py  tgas.py
gaia/dr1/tests/: test_tgas.py
gaia/dr1/tests/data/: tiny-tgas.fits
gaia/tests/: setup_package.py  test_data.py
gaia/tests/data/: gdr2mock.votable  gdr2mock_unitless.fits
notebooks/: Pyia-demo.ipynb
pyia/: data.py  extinction.py  ruwetools.py  utils.py
pyia/data/: readme.txt  table_u0_2D.txt
pyia/tests/: test_data.py
pyia/tests/data/: gdr2_sm.fits
src/pyia/: __init__.py  _astropy_init_.py  data.py  extinction.py  ruwetools.py  setup_package.py  version.py
src/pyia/data/: readme.txt  table_u0_g.txt
src/pyia/tests/data/: gdr2_sm_negplx.fits
tests/: test_data.py
tests/data/: gdr2_sm.fits  gdr2_sm.vot  gdr3_sm.fits  gedr3_sm.fits
