[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "pyia"
authors = [
  { name = "Adrian Price-Whelan", email = "adrianmpw@gmail.com" },
]
description = "A Python package for working with data from the Gaia mission"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "astropy",
  "numpy",
  "pandas",
  "dustmaps",
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
  "pytest-astropy",
  "pyyaml",
  "scipy",
  "astroquery"
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=7.0",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "matplotlib",
  "scipy",
  "sphinx-automodapi",
  "pydata-sphinx-theme",
]

[project.urls]
Homepage = "https://github.com/adrn/pyia"
"Bug Tracker" = "https://github.com/adrn/pyia/issues"
Discussions = "https://github.com/adrn/pyia/discussions"
Changelog = "https://github.com/adrn/pyia/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/pyia/_version.py"

[tool.hatch.env.default]
features = ["test"]
scripts.test = "pytest {args}"

[tool.setuptools_scm]
# Enables uploads to testpypi - see https://github.com/pypa/setuptools_scm/issues/342
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:unclosed file:ResourceWarning",
  "ignore:unclosed <socket:ResourceWarning",
  "ignore:unclosed <ssl.SSLSocket:ResourceWarning",
  "ignore:negative parallaxes are converted:astropy.utils.exceptions.AstropyWarning"
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["pyia"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.8"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "pyia.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "numpy.*",
  "astroquery.*",
  "dustmaps.*"
]
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["pyia._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.8"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "W",
  "C",
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
