[metadata]
name = pyia
author = Adrian Price-Whelan
author_email = adrianmpw@gmail.com
license = MIT
license_file = LICENSE.rst
url = http://github.com/adrn/pyia
description = A Python package for working with data from the Gaia mission
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = adrn/pyia

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    pandas

[options.package_data]
* = *.fits, *.vot
pyia = data/*.txt

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    cython
    matplotlib
    scipy

[tool:pytest]
testpaths = "pyia" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    pyia/_astropy_init*
    pyia/conftest.py
    pyia/*setup_package*
    pyia/tests/*
    pyia/*/tests/*
    pyia/version*
    */pyia/_astropy_init*
    */pyia/conftest.py
    */pyia/*setup_package*
    */pyia/tests/*
    */pyia/*/tests/*
    */pyia/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
